--- a/files/home/dot-config/tmux/tmux.conf
+++ b/files/home/dot-config/tmux/tmux.conf
@@ -1,7 +1,8 @@
 setw -g mode-keys vi
 set -s escape-time 1
 set-option -g mouse on
-bind -T copy-mode-vi y send-keys -X copy-pipe 'xclip -in -sel clip'
+bind -T copy-mode-vi y send-keys -X copy-pipe-no-clear 'xclip -in -sel clip'
+bind -T copy-mode-vi Y send-keys -X copy-pipe-and-cancel 'xclip -in -sel clip'
 bind -n DoubleClick1Pane \
     select-pane -t = \; \
     if-shell -F "#{||:#{pane_in_mode},#{mouse_any_flag}}" \
@@ -10,7 +11,18 @@ bind -n DoubleClick1Pane \
           send-keys -X select-word ; \
           run-shell -d 0.3; \
           send-keys -X copy-pipe-and-cancel 'xclip -in -sel clip' }
-bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-selection-no-clear 'xclip -in -sel clip'
+bind -n TripleClick1Pane \
+    select-pane -t = \; \
+    if-shell -F "#{||:#{pane_in_mode},#{mouse_any_flag}}" \
+        { send-keys -M } \
+        { copy-mode -H ; \
+          send-keys -X select-line ; \
+          run-shell -d 0.3; \
+          send-keys -X copy-pipe-and-cancel 'xclip -in -sel clip' }
+bind -T copy-mode-vi DoubleClick1Pane send -X select-word
+bind -T copy-mode-vi TripleClick1Pane send -X select-line
+# bind -T copy-mode-vi MouseDragEnd1Pane send -X copy-pipe-no-clear 'xclip -in -sel clip'
+unbind -T copy-mode-vi MouseDragEnd1Pane
 bind -T copy-mode-vi MouseDown1Pane select-pane \; send-keys -X clear-selection
 
 # new windows/panes will open in current path
