--- a/files/home/dot-config/tmux/tmux.conf
+++ b/files/home/dot-config/tmux/tmux.conf
@@ -1,4 +1,5 @@
 setw -g mode-keys vi
+set-option -g status-style fg=white,bg=black
 set -s escape-time 1
 set-option -g mouse on
 bind -T copy-mode-vi y send-keys -X copy-pipe-no-clear 'xclip -in -sel clip'
@@ -58,3 +59,8 @@ bind -r w select-pane -l
 bind g copy-mode
 
 bind 0 run-shell -b "tmux capture-pane -p | /home/z/.local/bin/linkmenu.sh"
+
+unbind C-b
+set-option -g prefix C-Space
+
+bind q kill-session
