--- a/files/home/dot-config/tmux/tmux.conf
+++ b/files/home/dot-config/tmux/tmux.conf
@@ -1,5 +1,5 @@
+source-file ~/.config/tmux/theme.conf
 setw -g mode-keys vi
-set-option -g status-style fg=white,bg=black
 set -s escape-time 1
 set-option -g mouse on
 bind -T copy-mode-vi y send-keys -X copy-pipe-no-clear 'xclip -in -sel clip'
