tmux no status-right

--- a/files/home/dot-config/tmux/theme.conf
+++ b/files/home/dot-config/tmux/theme.conf
@@ -37,3 +37,5 @@ set-option -g message-command-style "fg=#ffffff,bg=#000000"
 
 set-window-option -g window-active-style "fg=#ffffff,bg=#000000"
 set-window-option -g window-style "fg=#ffffff,bg=#000000"
+
+set -g status-right ""
