--- a/files/home/dot-config/tmux/tmux.conf
+++ b/files/home/dot-config/tmux/tmux.conf
@@ -64,3 +64,6 @@ unbind C-b
 set-option -g prefix C-Space
 
 bind q kill-session
+set -g visual-bell off
+set -g monitor-bell off
+set-option -g bell-action none
