--- a/files/home/dot-config/tmux/theme.conf
+++ b/files/home/dot-config/tmux/theme.conf
@@ -27,7 +27,7 @@ set-window-option -g clock-mode-colour "#ffffff"
 set-window-option -g mode-style "fg=#000000,bg=#ffffff"
 
 # bell
-set-window-option -g window-status-bell-style "fg=#ffffff,bg=#000000"
+set-window-option -g window-status-bell-style none
 
 # style for window titles with activity
 set-window-option -g window-status-activity-style "fg=#ffffff,bg=#000000"
