--- a/files/home/dot-config/tmux/tmux.conf
+++ b/files/home/dot-config/tmux/tmux.conf
@@ -58,7 +58,9 @@ bind -r w select-pane -l
 
 bind g copy-mode
 
-bind 0 run-shell -b "tmux capture-pane -p | /home/z/.local/bin/linkmenu.sh"
+bind 0 run-shell -b "tmux capture-pane -p | linkmenu.sh; exit 0"
+bind 8 run-shell -b "/home/z/.local/bin/tmenu ks 2>&1; exit 0"
+bind 7 run-shell -b "/home/z/.local/bin/tmenu ss 2>&1; exit 0"
 
 unbind C-b
 set-option -g prefix C-Space
