--- a/files/home/dot-config/picom/picom.conf
+++ b/files/home/dot-config/picom/picom.conf
@@ -1,3 +1,14 @@
 backend = "glx"
 vsync = true
 vsync-use-glfinish = true
+mark-wmwin-focued = true
+mark-ovredir-focused = true
+detect-rounded-corners = true
+detect-client-opacity = true
+detect-transient = true
+detect-client-leader = true
+use-damage = true
+use-ewmh-active-win = true
+unredir-if-possible = true
+glx-no-rebind-pixmap = true
+xrender-sync-fence = true
